@@ -30,7 +30,7 @@
       <option name="IGNORE_JAVADOC_PERIOD" value="true" />
       <option name="IGNORE_DUPLICATED_THROWS" value="false" />
       <option name="IGNORE_POINT_TO_ITSELF" value="false" />
-      <option name="myAdditionalJavadocTags" value="author:,date:,description" />
+      <option name="myAdditionalJavadocTags" value="author:,date:,description,param:,return:" />
     </inspection_tool>
   </profile>
 </component>
