@@ -166,3 +166,14 @@
 
 # 上次问题解决方案：
 1.熟悉OpenGL ES
+————————————————————————————————————————————————————————————————————————
+
+2020年9月12日16:37:49
+# 当前进度：
+1.学习EGL,FBO,SurfaceTexture等
+
+# 待处理问题：
+1.录制功能有问题，待调试解决
+
+# 上次问题解决方案：
+1.熟悉OpenGL ES
